Spring Security. Configuration. Add custom password verification

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -54,3 +54,6 @@ typeMismatch.java.lang.Short=Property {0} must be a valid number
 typeMismatch.java.math.BigDecimal=Property {0} must be a valid number
 typeMismatch.java.math.BigInteger=Property {0} must be a valid number
 typeMismatch=Property {0} is type-mismatched
+
+# Spring Security
+command.password.error.strength=Minimum 4 characters, maximum 32 at least 1 Alphabet and 1 Number
