Controller. Views. Add home action to DrugController. Add view drug/home.gsp

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -59,3 +59,4 @@ typeMismatch=Property {0} is type-mismatched
 command.password.error.strength=Minimum 4 characters, maximum 32 at least 1 Alphabet and 1 Number
 forgotPasswordCommand.username.nullable=Please enter your email
 spring.security.ui.forgotPassword.description=Enter your email and we'll send a link to reset your password.
+springSecurity.login.username.label=Email
