View.  Labels are extracted to i18n from home view

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -60,3 +60,13 @@ command.password.error.strength=Minimum 4 characters, maximum 32 at least 1 Alph
 forgotPasswordCommand.username.nullable=Please enter your email
 spring.security.ui.forgotPassword.description=Enter your email and we'll send a link to reset your password.
 springSecurity.login.username.label=Email
+
+# Domain
+ua.ck.solo.aidkit.Drug.title.label=Title
+ua.ck.solo.aidkit.Drug.titleEn.label=Title(English)
+ua.ck.solo.aidkit.Drug.quantity.label=Quantity
+ua.ck.solo.aidkit.Drug.description.label=Description
+ua.ck.solo.aidkit.Drug.structure.label=Structure
+
+#Views
+views.drug.drugTitle.label=Drug:
